package com.company;

public class Operations
{
    public Operations()
    {
        System.out.println("Operations is engaged.");
    }

    public int getHoursWorked(int employeeID)
    {
        return 38;
    }
}
