@startuml

title __COMPANY's Class Diagram__\n

  namespace com.company {
    class com.company.Employee {
        - employeeID : int
        + Employee()
        + calculatePay()
    }
  }
  

  namespace com.company {
    class com.company.Finance {
        + Finance()
        + generatePaySlip()
        - getHourlyRate()
        - getHoursWorked()
        - getPay()
        - storePayslip()
    }
  }
  

  namespace com.company {
    class com.company.HumanResources {
        + HumanResources()
        + getHourlyRate()
    }
  }
  

  namespace com.company {
    class com.company.Main {
        {static} - employee : Employee
        {static} + main()
    }
  }
  

  namespace com.company {
    class com.company.Operations {
        + Operations()
        + getHoursWorked()
    }
  }
  

  namespace com.company {
    class com.company.Payslip {
        - employeeID : int
        - payAmount : double
        + Payslip()
        + getEmployeeID()
        + getPayAmount()
    }
  }
  

  namespace com.company {
    class com.company.TechnologyServices {
        + TechnologyServices()
        + storePayslip()
    }
  }
  

  com.company.Employee o-- com.company.Finance : CFO
  com.company.Finance o-- com.company.TechnologyServices : CTO
  com.company.Finance o-- com.company.Operations : COO
  com.company.Finance o-- com.company.HumanResources : HR
  com.company.Finance o-- com.company.Payslip : payslip


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
